pf: contratos por tags
