# swagger-output.json
@@ -23,6 +23,9 @@
     },
     "/users/": {
       "get": {
+        "tags": [
+          "Usuario"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -37,6 +40,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Usuario"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -53,6 +59,9 @@
     },
     "/users/{id}": {
       "put": {
+        "tags": [
+          "Usuario"
+        ],
         "description": "",
         "parameters": [
           {
@@ -77,6 +86,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Usuario"
+        ],
         "description": "",
         "parameters": [
           {
@@ -103,6 +115,9 @@
     },
     "/roles/": {
       "get": {
+        "tags": [
+          "Rol"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -117,6 +132,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Rol"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -133,6 +151,9 @@
     },
     "/roles/{id}": {
       "put": {
+        "tags": [
+          "Rol"
+        ],
         "description": "",
         "parameters": [
           {
@@ -157,6 +178,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Rol"
+        ],
         "description": "",
         "parameters": [
           {
@@ -183,6 +207,9 @@
     },
     "/category/": {
       "get": {
+        "tags": [
+          "Categoria"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -197,6 +224,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Categoria"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -213,6 +243,9 @@
     },
     "/category/{id}": {
       "put": {
+        "tags": [
+          "Categoria"
+        ],
         "description": "",
         "parameters": [
           {
@@ -237,6 +270,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Categoria"
+        ],
         "description": "",
         "parameters": [
           {
@@ -263,6 +299,9 @@
     },
     "/publication/": {
       "post": {
+        "tags": [
+          "Publicacion"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -277,6 +316,9 @@
         }
       },
       "get": {
+        "tags": [
+          "Publicacion"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -293,6 +335,9 @@
     },
     "/publication/{id}": {
       "put": {
+        "tags": [
+          "Publicacion"
+        ],
         "description": "",
         "parameters": [
           {
@@ -317,6 +362,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Publicacion"
+        ],
         "description": "",
         "parameters": [
           {
@@ -343,6 +391,9 @@
     },
     "/publication/category/{id}": {
       "get": {
+        "tags": [
+          "Publicacion"
+        ],
         "description": "",
         "parameters": [
           {
@@ -369,6 +420,9 @@
     },
     "/publication/titulo": {
       "get": {
+        "tags": [
+          "Publicacion"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -385,6 +439,9 @@
     },
     "/comment/": {
       "post": {
+        "tags": [
+          "Comentario"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -401,6 +458,9 @@
     },
     "/comment/{id}": {
       "put": {
+        "tags": [
+          "Comentario"
+        ],
         "description": "",
         "parameters": [
           {
@@ -425,6 +485,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Comentario"
+        ],
         "description": "",
         "parameters": [
           {
@@ -451,6 +514,9 @@
     },
     "/comment/publication/{id}": {
       "get": {
+        "tags": [
+          "Comentario"
+        ],
         "description": "",
         "parameters": [
           {
